# Py_web_HW_09

./: README.md  authors.json  authors_spider.json  list_authors.json  main.py  main_for_authors.py  main_for_quotes.py  main_list_for_authors.py  pyproject.toml  quotes.json  test.py
new_spyder/: scrapy.cfg
new_spyder/new_spyder/: items.py  middlewares.py  pipelines.py  settings.py
new_spyder/new_spyder/spiders/: authors.py
