[tool.poetry]
name = "py-web-hw-09"
version = "0.1.0"
description = ""
authors = ["alex_kondr <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_09"}]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
