[tool.poetry]
name = "py-web-hw-08"
version = "0.1.0"
description = ""
authors = ["alex_kondr <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_08"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pymongo = "^4.3.3"
redis = "^4.5.1"
mongoengine = "^0.26.0"
python-dateutil = "^2.8.2"
redis-lru = "^0.1.2"
faker = "^17.0.0"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
